feat(succes): Complete the company division validation and convert the code to OOP.
