# src/controllers/division.controller.js
@@ -1,59 +1,59 @@
-import { StatusCodes } from 'http-status-codes'
 import { divisionService } from '../services/division.service.js'
 import { divisionModel } from '../models/division.model.js'
+import { CreatedResponse, SuccessResponse } from '../utils/SuccessResponse.js'
 
-export const divisionController = {
-  create: async (req, res, next) => {
+
+class DivisionController {
+  //  get list
+  async lists(req, res, next) {
+    try {
+      const result = await divisionModel.lists()
+      new SuccessResponse({
+        res: res,
+        data: result,
+        message: 'Get the complete list of successful Division.'
+      })
+    } catch (error) { next(error) }
+  }
+  // create
+  async create(req, res, next) {
+    try {
+
+      const result = await divisionService.create(req.body)
+      new CreatedResponse({
+        res: res,
+        data: result,
+        message: 'Created a successful division'
+      })
+    } catch (error) { next(error) }
+  }
+
+  // Update by Id
+  async update(req, res, next) {
     try {
       const data = req.body
-
-      const result = await divisionService.create(data)
-
-      return res.status(StatusCodes.CREATED).json({
-        success: true,
-        message: 'Create a successful divisions',
-        data: result
+      console.log('🚀 ~ DivisionController ~ update ~ data:', data)
+      await divisionService.update(data)
+      new SuccessResponse({
+        res: res,
+        // data: result,
+        message: 'Updating a successful division.'
       })
-    } catch (error) {
-      next(error)
-    }},
-  // controller get all company
-  list: async (req, res, next) =>  {
+    } catch (error) { next(error) }
+  }
+
+  // delete by id
+  async delete(req, res, next) {
     try {
-      const result = await divisionModel.listAll()
+      const { DIVISION_ID } = req.body
 
-      return res.status(StatusCodes.OK).json({
-        success: true,
-        message: 'Get the complete list of successful divisions.',
-        data: result
+      await divisionService.delete(DIVISION_ID)
+      new SuccessResponse({
+        res: res,
+        message: 'Complete the deletion of a division.'
       })
-    } catch (error) {
-      next(error)
-    }
-  },
-  update: async (req, res, next) => {
-    try {
-      const  data = req.body
-
-      const result = await divisionService.update(data)
-
-      return res.status(StatusCodes.OK).json({
-        success: true,
-        message: 'Updating a successful division.',
-        data: result
-      })
-    } catch (error) {
-      next(error)
-    }},
-  delete: async (req, res, next) => {
-    try {
-      await divisionService.delete(req.body)
-
-      return res.status(StatusCodes.OK).json({
-        success: true,
-        message: 'Delete a successful division.'
-      })
-    } catch (error) {
-      next(error)
-    }}
+    } catch (error) { next(error) }
+  }
 }
+
+export const divisionController = new DivisionController()
