# src/models/division.model.js
@@ -1,45 +1,34 @@
-import { PRISMA } from '../configs/db.config.js'
+import BaseModel from './BaseModel.js'
 
-export const divisionModel = {
-  create: async (data) => {
-    return await PRISMA.dIVISIONS.create({
-      data: {
-        DIVISION_NAME: data.DIVISION_NAME,
-        COMPANY_ID: data.COMPANY_ID,
-        STATUS: data.STATUS
-      }
-    })
-  },
-  listAll: async () => {
-    return await PRISMA.dIVISIONS.findMany({
-      orderBy: {
-        DIVISION_ID: 'asc'
-      }
-    })
-  },
-  findById: async (id) => {
-    return await PRISMA.dIVISIONS.findUnique({
-      where: { DIVISION_ID: id }
-    })
-  },
 
-  findByName: async (data) => {
-    return await PRISMA.dIVISIONS.findFirst({
-      where: {
-        DIVISION_NAME: data
-      }
-    })
-  },
-  updateById: async (id, updateData) => {
-    return await PRISMA.dIVISIONS.update({
-      where: { DIVISION_ID: id },
-      data: updateData
-    })
-  },
-  deleteById: async (id) => {
-    return await PRISMA.dIVISIONS.delete({
-      where: { DIVISION_ID: id }
-    })
+class DivisionModel extends BaseModel {
+  constructor() {
+    super('dIVISIONS', 'DIVISION_ID', 'DIVISION_NAME', 'COMPANY_ID', 'STATUS')
+  }
+
+  async lists() {
+    return await super.ListAll()
+  }
+
+  async create(data) {
+    return await super.Create(data)
+  }
+
+  async findByName(name) {
+    return await super.findByField(name, 'DIVISION_NAME')
+  }
+
+  async updateById(id, data) {
+    return await super.Update(id, 'DIVISION_ID', data)
+  }
+
+  async findById(id) {
+    return await super.findByField(id, 'DIVISION_ID')
+  }
+
+  async deleteById(id) {
+    return await super.DeleteById(id, 'DIVISION_ID')
   }
 }
 
+export const divisionModel = new DivisionModel()
